[gd_scene load_steps=8 format=3 uid="uid://bvm5w83w8vw6c"]

[ext_resource type="Script" uid="uid://b2ibbgj7qrae8" path="res://tutorial/tutorial.gd" id="1_c13y7"]
[ext_resource type="FontFile" uid="uid://dc5qmu3hkmfvw" path="res://textures_and_audios/MR ROBOT.ttf" id="2_8ho6b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ph3nu"]
bg_color = Color(0.32941177, 0.75686276, 0.49019608, 0.47058824)

[sub_resource type="Theme" id="Theme_4kmhl"]
Label/colors/font_color = Color(0.32941177, 0.75686276, 0.49019608, 1)
Label/colors/font_outline_color = Color(0.05490196, 0.4117647, 0.18039216, 1)
Label/constants/outline_size = 10
Label/font_sizes/font_size = 45
Label/fonts/font = ExtResource("2_8ho6b")
Label/styles/normal = SubResource("StyleBoxFlat_ph3nu")

[sub_resource type="LabelSettings" id="LabelSettings_8ho6b"]
font = ExtResource("2_8ho6b")
font_size = 40
font_color = Color(0.32941177, 0.75686276, 0.49019608, 1)
outline_size = 15
outline_color = Color(0.05490196, 0.4117647, 0.18039216, 1)

[sub_resource type="LabelSettings" id="LabelSettings_burua"]
font = ExtResource("2_8ho6b")
font_size = 40
font_color = Color(0.87058824, 0.4862745, 0.4392157, 1)
outline_size = 15
outline_color = Color(0.50980395, 0.18039216, 0.14117648, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vy6qu"]
font = ExtResource("2_8ho6b")
font_size = 20
font_color = Color(0.32941177, 0.75686276, 0.49019608, 1)
outline_size = 8
outline_color = Color(0.05490196, 0.4117647, 0.18039216, 1)

[node name="Tutorial" type="Node2D"]
process_mode = 3
script = ExtResource("1_c13y7")

[node name="UpIcon" type="CanvasLayer" parent="."]
visible = false

[node name="Label" type="Label" parent="UpIcon"]
offset_left = 797.0
offset_top = 114.0
offset_right = 854.0
offset_bottom = 166.0
theme = SubResource("Theme_4kmhl")
text = "W"
horizontal_alignment = 1
vertical_alignment = 2

[node name="ColorRect" type="ColorRect" parent="UpIcon"]
offset_left = 821.0
offset_top = 57.0
offset_right = 826.0
offset_bottom = 106.0
color = Color(0.32941177, 0.75686276, 0.49019608, 1)

[node name="ColorRect2" type="ColorRect" parent="UpIcon"]
offset_left = 821.3299
offset_top = 57.010174
offset_right = 825.40454
offset_bottom = 87.4308
rotation = 0.52456546
color = Color(0.32941177, 0.75686276, 0.49019608, 1)

[node name="ColorRect3" type="ColorRect" parent="UpIcon"]
offset_left = 822.0
offset_top = 58.999992
offset_right = 826.07465
offset_bottom = 89.42062
rotation = -0.52534413
color = Color(0.32941177, 0.75686276, 0.49019608, 1)

[node name="DownIcon" type="CanvasLayer" parent="."]
visible = false

[node name="Label" type="Label" parent="DownIcon"]
offset_left = 794.0
offset_top = 433.0435
offset_right = 851.0
offset_bottom = 485.0435
theme = SubResource("Theme_4kmhl")
text = "S"
horizontal_alignment = 1
vertical_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="DownIcon"]
offset_left = 823.0
offset_top = 540.0
offset_right = 828.0
offset_bottom = 589.0
rotation = 3.1415927
color = Color(0.32941177, 0.75686276, 0.49019608, 1)

[node name="ColorRect2" type="ColorRect" parent="DownIcon"]
offset_left = 823.0
offset_top = 540.0
offset_right = 827.07465
offset_bottom = 570.42065
rotation = 3.4522612
color = Color(0.32941177, 0.75686276, 0.49019608, 1)

[node name="ColorRect3" type="ColorRect" parent="DownIcon"]
offset_left = 822.00006
offset_top = 538.0
offset_right = 826.0747
offset_bottom = 568.42065
rotation = 2.7925267
color = Color(0.32941177, 0.75686276, 0.49019608, 1)

[node name="BoostIcon" type="CanvasLayer" parent="."]
visible = false

[node name="Label" type="Label" parent="BoostIcon"]
anchors_preset = -1
anchor_left = -0.0069444445
anchor_top = -0.0015432099
anchor_right = -0.0034722222
anchor_bottom = -0.0015432099
offset_left = 697.0
offset_top = 268.0
offset_right = 965.0
offset_bottom = 320.0
theme = SubResource("Theme_4kmhl")
text = "Spacebar"
horizontal_alignment = 1
vertical_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="FullscreenIcon" type="CanvasLayer" parent="."]
visible = false

[node name="Label" type="Label" parent="FullscreenIcon"]
offset_left = 588.0
offset_top = 267.0
offset_right = 645.0
offset_bottom = 319.0
theme = SubResource("Theme_4kmhl")
text = "F"
horizontal_alignment = 1
vertical_alignment = 2

[node name="CollectText" type="Label" parent="."]
visible = false
offset_left = 448.0
offset_top = 64.0
offset_right = 704.0
offset_bottom = 128.0
text = "Collect!"
label_settings = SubResource("LabelSettings_8ho6b")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DodgeText" type="Label" parent="."]
visible = false
offset_left = 448.0
offset_top = 64.0
offset_right = 704.0
offset_bottom = 128.0
text = "dodge!"
label_settings = SubResource("LabelSettings_burua")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DodgeFailOverlay" type="ColorRect" parent="."]
visible = false
z_index = 2
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.50980395, 0.18039216, 0.14117648, 0.31764707)

[node name="GoodJobText" type="Label" parent="."]
visible = false
offset_left = 448.0
offset_top = 64.0
offset_right = 704.0
offset_bottom = 128.0
text = "Good Job!"
label_settings = SubResource("LabelSettings_8ho6b")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReturningtoMenuText" type="Label" parent="."]
visible = false
offset_left = 347.0
offset_top = 186.0
offset_right = 809.0
offset_bottom = 250.0
text = "returning to menu..."
label_settings = SubResource("LabelSettings_vy6qu")
horizontal_alignment = 1
vertical_alignment = 1
